--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DevJonTaylor/question-factory.git"
+    "url": "git://github.com/DevJonTaylor/question-factory.git"
   },
   "keywords": [],
   "author": "",
