--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 12
       - run: npm ci
       - run: npm test
 
@@ -25,9 +25,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 12
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: 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
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
